# Immolate

./: CMakeLists.txt  README.md
filters/: max_cash_ante_1.c  perkeo_observatory.c  red_poly_glass.c
lib/include/: immolate.h
lib/src/: cache.c  consts.c  debug.c  functions.c  instance.c  items.c  seed.c  util.c
src/: immolate.c
